# data-science-challenges

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
data_science_challenges/: __init__.py
data_science_challenges/fair_mast_data/: __init__.py
data_science_challenges/fair_mast_data/plasma_current/: linear_regression.csv  train.csv
data_science_challenges/fair_mast_data/plasma_volume/: linear_regression.csv  optimized_regression.csv
fair_mast_data/plasma_current/: test.csv
fair_mast_data/plasma_volume/: linear_regression.csv
notebooks/: MAST Plasma Current.ipynb  MAST Plasma Equilibrium.ipynb  MAST Plasma Volume.ipynb  Plasma Equilibrium Dataset.ipynb  Plasma Volume Dataset.ipynb  __init__.py
