[project]
name = "data-science-challenges"
version = "0.2.0"
description = "Data science challenges using Fusion data from MAST"
readme = "README.md"
license = "CC-BY-SA-4.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "fastparquet>=2024.11.0",
    "fsspec>=2025.3.2",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pyarrow>=20.0.0",
    "requests>=2.32.3",
    "s3fs>=2025.3.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
    "zarr>=3.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["data_science_challenges"]
include = [
    "data_science_challenges/plasma_current/*.csv",
]
